--- a/language/Swedish/strings.xml
+++ b/language/Swedish/strings.xml
@@ -122,6 +122,7 @@
   <string id="167">Aktivera FTP-server</string>
   <string id="169">Upplösning</string>
   <string id="170">Justera uppdateringsfrekvens till att matcha video</string>
+  <string id="171">Sträck 4:3 innehåll till 16:9</string>
   <string id="172">Utgivningsdatum</string>
   <string id="175">Sinnesstämning</string>
   <string id="176">Stilar</string>
@@ -228,6 +229,10 @@
   <string id="296">Ta bort bokmärken</string>
   <string id="297">Ljudkompensering</string>
   <string id="298">Bokmärken</string>
+  <string id="299">- AAC-kapabel förstärkare</string>
+  <string id="300">- MP1-kapabel förstärkare</string>
+  <string id="301">- MP2-kapabel förstärkare</string>
+  <string id="302">- MP3-kapabel förstärkare</string>
   <string id="303">Fördröjning</string>
   <string id="304">Språk</string>
   <string id="305">Aktiverad</string>
@@ -2014,4 +2019,15 @@
   <string id="33081">Denna fil är sammanslagen, välj den del du vill spela.</string>
   <string id="33082">Sökväg till skript</string>
   <string id="33083">Aktivera egen skriptknapp</string>
+  <string id="34100">Högtalarkonfiguration</string> 
+  <string id="34101">2.0</string> 
+  <string id="34102">2.1</string> 
+  <string id="34103">3.0</string> 
+  <string id="34104">3.1</string> 
+  <string id="34105">4.0</string> 
+  <string id="34106">4.1</string> 
+  <string id="34107">5.0</string> 
+  <string id="34108">5.1</string> 
+  <string id="34109">7.0</string> 
+  <string id="34110">7.1</string> 
 </strings>
