changed: Cleaned up and removed unneeded PVR related strings removed: Old unused Addon related strings
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27655 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1609,218 +1609,7 @@
   <string id="17998">%i Stunden</string>
   <string id="17999">%i Tage</string>
 
-  <!-- strings 18000 thru 18999 used for tv interface -->
-  <string id="18000">TV</string>
-  <string id="18001">Klienten verwalten...</string>
-  <string id="18002">Verbindungs-Zeitüberlauf</string>
-  <string id="18003">Kommando-Zeitüberlauf</string>
-  <string id="18004">Menü/OSD</string>
-  <string id="18005">Tage für TV-Programm Anzeige</string>
-  <string id="18006">Alte EPG-Daten anzeigen</string>
-  <string id="18007">Zeige nur frei empfangbare Kanäle</string>
-  <string id="18008">Zeige Radio Kanäle</string>
-  <string id="18009">Anzeigedauer für Kanalinfo</string>
-  <string id="18010">Info beim Kanalwechsel</string>
-  <string id="18011">Angeforderte Kanalinfo schließen</string>
-  <string id="18016">Tage für alte EPG Daten in Datenbank</string>
-  <string id="18017">Aufnahmen</string>
-  <string id="18018">Dauer der Direktaufzeichnung</string>
-  <string id="18019">Standart-Priorität</string>
-  <string id="18020">Standart-Lebensdauer</string>
-  <string id="18021">Vorlauf zum Timer-Beginn</string>
-  <string id="18022">Nachlauf am Timer-Ende</string>
-  <string id="18023">Wiedergabe</string>
-  <string id="18024">Infobox für Videolänge verbergen</string>
-  <string id="18025">Suchüberlauf vor Kanalwiedergabe</string>
-  <string id="18026">Wiedergabe minimiert starten</string>
-  <string id="18027">Deinterlace für SD-Sender erzwingen</string>
-  <string id="18028">Mindestzeit für Kanalhistorie</string>
-  <string id="18029">Unbekannter Kanal %u</string>
-  <string id="18030">PVR-Informationen</string>
-  <string id="18031">PVR-Service</string>
-  <string id="18032">Lade EPG von den PVR-Klienten</string>
-  <string id="18033">Suche fehlende Kanallogos</string>
-  <string id="18034">Beim umschalten auf OK verzichten</string>
-
-  <string id="18048">Kanaleinstellungen bearbeiten</string>
-  <string id="18049">Neuer Kanal</string>
-  <string id="18050">Programm</string>
-  <string id="18051">TV Kanäle</string>
-  <string id="18052">Radio Kanäle</string>
-  <string id="18053">Konnte Aufnahme nicht starten</string>
-  <string id="18054">Timer</string>
-  <string id="18056">Benutzt:</string>
-  <string id="18057">Timer hinzufügen...</string>
-  <string id="18058">Umschalten</string>
-  <string id="18059">Wird derzeit nicht unterstützt!</string>
-  <string id="18060">Seite</string>
-  <string id="18061">Kanal hinzufügen...</string>
-  <string id="18062">Nr.:</string>
-  <string id="18063">Name:</string>
-  <string id="18064">Jetzt läuft:</string>
-  <string id="18065">Kanäle</string>
-  <string id="18066">Aufnahmen</string>
-  <string id="18067">Vom:</string>
-  <string id="18068">Timer bearbeiten</string>
-  <string id="18069">Aufnahme läuft</string>
-  <string id="18070">Timer aktivieren/deaktivieren</string>
-  <string id="18071">Timer löschen?</string>
-  <string id="18072">Neuer Timer</string>
-  <string id="18073">Aufnahme-Informationen</string>
-  <string id="18074">Keine Informationen verfügbar!</string>
-  <string id="18075">Auf</string>
-  <string id="18076">Timer</string>
-  <string id="18077">Am:</string>
-  <string id="18078">von</string>
-  <string id="18079">bis</string>
-  <string id="18080">Mo</string>
-  <string id="18081">Di</string>
-  <string id="18082">Mi</string>
-  <string id="18083">Do</string>
-  <string id="18084">Fr</string>
-  <string id="18085">Sa</string>
-  <string id="18086">So</string>
-  <string id="18087">ab</string>
-  <string id="18088">Nächste Aufnahme</string>
-  <string id="18089">Jetzige Aufnahme</string>
-  <string id="18090">Warnung</string>
-  <string id="18091">Keine PVR Klienten verfügbar</string>
-  <string id="18092">Überprüfen sie ihre Einstellungen</string>
-  <string id="18093">Verbindung zum PVR-Server verloren</string>
-  <string id="18094">Versuchen wieder zu verbinden?</string>
-  <string id="18095">Timer vorhanden</string>
-  <string id="18096">Kanal und Timer löschen?</string>
-  <string id="18097">Kanalwiedergabe läuft</string>
-  <string id="18098">Bitte schalten Sie auf einen anderen Kanal!</string>
-  <string id="18099">Kanal</string>
-  <string id="18100">Information</string>
-  <string id="18101">Jetzt</string>
-  <string id="18102">Nächstes</string>
-  <string id="18103">Zeitleiste</string>
-  <string id="18104">Kanal verschlüsselt</string>
-  <string id="18105">Kanal nicht verfügbar</string>
-  <string id="18106">PVR-Server ist nicht kompatibel!</string>
-  <string id="18107">Aktiviere zeitverseztes Fernsehen</string>
-  <string id="18108">Zwischenspeicher Größe</string>
-  <string id="18110">Film/Drama</string>
-  <string id="18111">Aktuelles/Nachrichten</string>
-  <string id="18112">Show</string>
-  <string id="18113">Sport</string>
-  <string id="18114">Kinder</string>
-  <string id="18115">Musik</string>
-  <string id="18116">Kunst</string>
-  <string id="18117">Bildung/Wissenschaft</string>
-  <string id="18118">Freizeit/Hobbies</string>
-  <string id="18119">Andere/Unbekannt</string>
-  <string id="18120">Wissenschaft</string>
-  <string id="18121">Social/Political/Economics</string>
-  <string id="18122">Special</string>
-  <string id="18123">Ordner für zeitversetzte Aufnahme</string>
-  <string id="18124">Zeitverseztes Fernsehen aktviert</string>
-  <string id="18125">Aber kein Zwischenspeicher-Ordner festgelegt!</string>
-  <string id="18126">Gruppenverwaltung</string>
-  <string id="18127">Ungruppiert</string>
-  <string id="18128">Keine Gruppen</string>
-  <string id="18129">Gruppen</string>
-  <string id="18130">Neuer Gruppenname</string>
-  <string id="18131">Alle Kanäle</string>
-  <string id="18132">Gruppe</string>
-  <string id="18133">XBMC synchronisiert TV-Daten mit Backend-Server</string>
-  <string id="18134">Kanal nicht verfügbar</string>
-  <string id="18135">Keine Gruppen definiert</string>
-  <string id="18136">Bitte erstellen Sie zuerst eine</string>
-  <string id="18137">Seite %3x-%02x nicht gefunden</string>
-  <string id="18138">Kanal unterstützt kein Videotext</string>
-  <string id="18139">EPG durchsuchen</string>
-  <string id="18140">Suchbegriff</string>
-  <string id="18141">Inklusive Beschreibung</string>
-  <string id="18142">Groß-/Kleinschreibung</string>
-  <string id="18143">Minimale Dauer</string>
-  <string id="18144">Maximale Dauer</string>
-  <string id="18145">Start Uhrzeit</string>
-  <string id="18146">Stop Uhrzeit</string>
-  <string id="18147">Start Datum</string>
-  <string id="18148">Stop Datum</string>
-  <string id="18149">Inklusive unbekannter Genres</string>
-  <string id="18150">Jetzt</string>
-  <string id="18151">Versteckt</string>
-  <string id="18152">Genre</string>
-  <string id="18153">Unterkategorie</string>
-  <string id="18154">Nur frei empfangbare Kanäle</string>
-  <string id="18155">Nur TV</string>
-  <string id="18156">Bei vorhandenem Timer ignorieren</string>
-  <string id="18157">Musik/Balett/Tanzen</string>
-  <string id="18158">Kunst/Kultur</string>
-  <string id="18159">Bei vorhandener Aufnahmen ignorieren</string>
-  <string id="18160">Keine Wiederholungen</string>
-  <string id="18162">Timer zeichnet auf - trotzdem löschen?</string>
-  <string id="18163">Titel-Informationen</string>
-  <string id="18164">Es liegen keine Suchergebnisse vor</string>
-  <string id="18165">Nach Kanal</string>
-  <string id="18166">Gehe zum Anfang</string>
-  <string id="18167">Gehe zum Ende</string>
-
-  <string id="18192">Aufnahme</string>
-  <string id="18193">Zeige Kanal</string>
-  <string id="18194">Zeige normale Kanäle</string>
-  <string id="18195">Zeige versteckte Kanäle</string>
-  <string id="18196">Verstecken bestätigen</string>
-  <string id="18197">Kanal verschieben nach:</string>
-  <string id="18198">Kanal verstecken</string>
-  <string id="18199">Drücken sie OK um zu den Einstellungen zu gelangen!</string>
-  <string id="18200">Backend:</string>
-  <string id="18201">Version:</string>
-  <string id="18202">Addresse:</string>
-  <string id="18203">Festplattengröße:</string>
-  <string id="18204">Kanäle:</string>
-  <string id="18205">Aufnahmen:</string>
-  <string id="18206">Timers:</string>
-  <string id="18207">Bitte geben Sie den Timer Namen ein</string>
-  <string id="18208">Klientnummer:</string>
-
-  <string id="18300">Mo-__-__-__-__-__-__</string>
-  <string id="18301">__-Di-__-__-__-__-__</string>
-  <string id="18302">__-__-Mi-__-__-__-__</string>
-  <string id="18303">__-__-__-Do-__-__-__</string>
-  <string id="18304">__-__-__-__-Fr-__-__</string>
-  <string id="18305">__-__-__-__-__-Sa-__</string>
-  <string id="18306">__-__-__-__-__-__-So</string>
-  <string id="18307">Mo-Di-Mi-Do-Fr-__-__</string>
-  <string id="18308">Mo-Di-Mi-Do-Fr-Sa-__</string>
-  <string id="18309">Mo-Di-Mi-Do-Fr-Sa-So</string>
-  <string id="18310">__-__-__-__-__-Sa-So</string>
-
-  <string id="18399">Aufnahme umbenennen?</string>
-  <string id="18400">Timer umbenennen?</string>
-  <string id="18401">Aktiv:</string>
-  <string id="18402">Kanal:</string>
-  <string id="18403">Tag:</string>
-  <string id="18404">Anfang:</string>
-  <string id="18405">Ende:</string>
-  <string id="18406">Priorität:</string>
-  <string id="18407">Lebensdauer (Tage):</string>
-  <string id="18408">Erster Tag:</string>
-  <string id="18409">Radio:</string>
-
-  <string id="18414">Aufnahme abbrechen</string>
-  <string id="18415">Timer löschen</string>
-  <string id="18416">Timer hinzufügen</string>
-  <string id="18417">Nicht automatisch umschalten</string>
-
-  <string id="18800">Timers nicht synchron!</string>
-  <string id="18801">Server Fehler!</string>
-  <string id="18802">Konnte Timer nicht löschen!</string>
-  <string id="18803">Erneut versuchen...</string>
-  <string id="18804">Aufnahmen nicht synchron!</string>
-  <string id="18805">Konnte Aufnahme nicht löschen!</string>
-  <string id="18806">Konnte Timer nicht speichern!</string>
-  <string id="18807">Kanäle nicht synchron!</string>
-  <string id="18808">Konnte Kanal nicht löschen!</string>
-  <string id="18809">Konnte Kanal nicht speichern!</string>
-  <string id="18810">Aufnahmen nicht synchron!</string>
-  <string id="18811">Konnte Aufnahme nicht löschen!</string>
-  <string id="18813">Bitte aktualisieren sie ihre Einstellungen.</string>
-
+  <!-- strings 19000 thru 19999 used for tv interface -->
   <string id="19000">Zum Kanal wechseln</string>
   <string id="19001">Benutzen Sie AND, OR und NOT in Verbindung mit Ihren Suchbegriffen, um detaillierter zu suchen.</string>
   <string id="19002">Oder benutzen Sie ganze Sätze in Ausrufezeichen z.B.: "Der Zauberer von Oz".</string>
@@ -1888,7 +1677,8 @@
   <string id="19064">Gehe zum Ende</string>
   <string id="19065">Standart Programmanzeige</string>
   <string id="19066">Lade Aufnahmeinformationen von den PVR-Klienten</string>
-
+  <string id="19067">Es ist bereits ein Timer vorhanden</string>
+  <string id="19068">Konnte Aufnahme nicht löschen!</string>
   <string id="19069">EPG</string>
   <string id="19070">Zeit bis zur EPG-Suche</string>
   <string id="19071">Zeit bis zur EPG-Aktualisierung</string>
@@ -1928,6 +1718,83 @@
   <string id="19105">Größe:</string>
   <string id="19106">Nächster Timer am</string>
   <string id="19107">um</string>
+  <string id="19108">Aufnahmen nicht synchron!</string>
+  <string id="19109">Konnte Timer nicht speichern!</string>
+  <string id="19110">Erneut versuchen...</string>
+  <string id="19111">Server Fehler!</string>
+  <string id="19112">Timers nicht synchron!</string>
+  <string id="19113">Backend:</string>
+  <string id="19114">Version:</string>
+  <string id="19115">Addresse:</string>
+  <string id="19116">Festplattengröße:</string>
+  <string id="19117">Kanäle:</string>
+  <string id="19118">Aufnahmen:</string>
+  <string id="19119">Timers:</string>
+  <string id="19120">Klientnummer:</string>
+  <string id="19121">Keine Wiederholungen</string>
+  <string id="19122">Timer zeichnet auf - trotzdem löschen?</string>
+  <string id="19123">Nur frei empfangbare Kanäle</string>
+  <string id="19124">Bei vorhandenem Timer ignorieren</string>
+  <string id="19125">Bei vorhandener Aufnahmen ignorieren</string>
+  <string id="19126">Start Uhrzeit</string>
+  <string id="19127">Stop Uhrzeit</string>
+  <string id="19128">Start Datum</string>
+  <string id="19129">Stop Datum</string>
+  <string id="19130">Minimale Dauer</string>
+  <string id="19131">Maximale Dauer</string>
+  <string id="19132">Inklusive unbekannter Genres</string>
+  <string id="19133">Suchbegriff</string>
+  <string id="19134">Inklusive Beschreibung</string>
+  <string id="19135">Groß-/Kleinschreibung</string>
+  <string id="19136">Kanal nicht verfügbar</string>
+  <string id="19137">Keine Gruppen definiert</string>
+  <string id="19138">Bitte erstellen Sie zuerst eine</string>
+  <string id="19139">Neuer Gruppenname</string>
+  <string id="19140">Alle Kanäle</string>
+  <string id="19141">Gruppe</string>
+  <string id="19142">EPG durchsuchen</string>
+  <string id="19143">Gruppenverwaltung</string>
+  <string id="19144">Ungruppiert</string>
+  <string id="19145">Keine Gruppen</string>
+  <string id="19146">Gruppen</string>
+  <string id="19147">PVR-Server ist nicht kompatibel!</string>
+  <string id="19148">Kanal</string>
+  <string id="19149">Mo</string>
+  <string id="19150">Di</string>
+  <string id="19151">Mi</string>
+  <string id="19152">Do</string>
+  <string id="19153">Fr</string>
+  <string id="19154">Sa</string>
+  <string id="19155">So</string>
+  <string id="19156">ab</string>
+  <string id="19157">Nächste Aufnahme</string>
+  <string id="19158">Jetzige Aufnahme</string>
+  <string id="19159">von</string>
+  <string id="19160">bis</string>
+  <string id="19161">Auf</string>
+  <string id="19162">Aufnahme läuft</string>
+  <string id="19163">Aufnahmen</string>
+  <string id="19164">Konnte Aufnahme nicht starten</string>
+  <string id="19165">Umschalten</string>
+  <string id="19166">PVR-Informationen</string>
+  <string id="19167">Suche fehlende Kanallogos</string>
+  <string id="19168">Beim umschalten auf OK verzichten</string>
+  <string id="19169">Infobox für Videolänge verbergen</string>
+  <string id="19170">Suchüberlauf vor Kanalwiedergabe</string>
+  <string id="19171">Wiedergabe minimiert starten</string>
+  <string id="19172">Dauer der Direktaufzeichnung</string>
+  <string id="19173">Standart-Priorität</string>
+  <string id="19174">Standart-Lebensdauer</string>
+  <string id="19175">Vorlauf zum Timer-Beginn</string>
+  <string id="19176">Nachlauf am Timer-Ende</string>
+  <string id="19177">Wiedergabe</string>
+  <string id="19178">Info beim Kanalwechsel</string>
+  <string id="19179">Angeforderte Kanalinfo schließen</string>
+  <string id="19180">TV</string>
+  <string id="19181">Menü/OSD</string>
+  <string id="19182">Tage für TV-Programm Anzeige</string>
+  <string id="19183">Alte EPG-Daten anzeigen</string>
+  <string id="19184">Anzeigedauer für Kanalinfo</string>
 
   <string id="19499">Andere/Unbekannt</string>
   <string id="19500">Movie/Drama</string>
@@ -2676,81 +2543,16 @@
   <string id="22042">weiß/blau</string>
   <string id="22043">schwarz/weiß</string>
 
-  <string id="23000">Erweiterungen</string>
-  <string id="23001">Lade Erweiterungen</string>
-  <string id="23002">Verfügbare Erweiterungen</string>
-  <string id="23003">Erweiterungsart</string>
-  <string id="23004">Empfohlen</string>
-  <string id="23005">Suche Erweiterungen</string>
-  <string id="23006">Suche...</string>
-  <string id="23007">Neue Suche</string>
-  <string id="23008">Erweiterung konfigurieren</string>
-  <string id="23009">Erweiterung entfernen</string>
-  <string id="23010">Sind sie sicher das die Erweiterung abgeschaltet werden soll?</string>
-  <string id="23011">Unbekannte Erweiterung</string>
-  <string id="23012">Multitype Erweiterung</string>
-  <string id="23013">Visualisierung</string>
-  <string id="23014">Skin Erweiterung</string>
-  <string id="23015">PVR-Klient</string>
-  <string id="23016">Python Skript</string>
-  <string id="23017">PVR Scraper</string>
-  <string id="23018">Video Scraper</string>
-  <string id="23019">Musik Scraper</string>
-  <string id="23020">Programm Scraper</string>
-  <string id="23021">Bildschirmschoner</string>
-  <string id="23022">PVR-Erweiterung</string>
-  <string id="23023">Video-Erweiterung</string>
-  <string id="23024">Music-Erweiterung</string>
-  <string id="23025">Programm-Erweiterung</string>
-  <string id="23026">Bilder-Erweiterung</string>
-  <string id="23027">Wetter-Erweiterung</string>
-  <string id="23028">Audio DSP Erweiterung</string>
   <string id="23030">Wetter-Plugin</string>
   <string id="23031">- Plugin Einstellungen</string>
-  <string id="23040">Erweiterung konnte sich nicht verbinden</string>
-  <string id="23041">Bitte überprüfen Sie ihre Einstellungen oder den Server</string>
-  <string id="23042">Unbekannter Benutzername für die Erweiterung</string>
-  <string id="23043">Wollen Sie die Einstellungen öffnen und wieder versuchen?</string>
-  <string id="23044">Unbekannter Benutzername</string>
-  <string id="23045">Falsches Passwort für die Erweiterung</string>
-  <string id="23046">Falsches Passwort</string>
-  <string id="23047">Erweiterung hat Verbindung verloren</string>
-  <string id="23048">Versuchen wieder zu verbinden?</string>
-  <string id="23049">Erweiterung startet neu</string>
-  <string id="23050">Erweiterung erfordert Neustart</string>
-  <string id="23051">XBMC muss neu gestartet werden</string>
-  <string id="23052">Soll jetzt neu gestartet werden?</string>
+
+  <string id="23052">Zwischenspeichern - %i Bytes</string>
   <string id="23053">Fehlende Einstellungen</string>
   <string id="23054">Falsche Einstellungen</string>
-  <string id="23055">Fehlende Dateien in der Erweiterung</string>
-  <string id="23056">Erweiterung kann nicht ausgeführt werden</string>
-  <string id="23057">Ein unbekannter Fehler ist aufgetreten</string>
-  <string id="23058">Haftungsausschluss</string>
-  <string id="23059">Wollen Sie die Erweiterung trotzdem nutzen?</string>
-  <string id="23060">Mehrzweck Erweiterungen verwalten</string>
-  <string id="23061">Visualisierungen verwalten</string>
-  <string id="23062">Skin Erweiterungen verwalten</string>
-  <string id="23063">PVR-Klienten verwalten</string>
-  <string id="23064">Skripte verwalten</string>
-  <string id="23065">PVR Scraper verwalten</string>
-  <string id="23066">Video Scraper verwalten</string>
-  <string id="23067">Musik Scraper verwalten</string>
-  <string id="23068">Programm Scraper verwalten</string>
-  <string id="23069">Bildschirmschoner verwalten</string>
-  <string id="23070">PVR Erweiterungen verwalten</string>
-  <string id="23071">Video Erweiterungen verwalten</string>
-  <string id="23072">Musik Erweiterungen verwalten</string>
-  <string id="23073">Programm Erweiterungen verwalten</string>
-  <string id="23074">Bilder Erweiterungen verwalten</string>
-  <string id="23075">Wetter Erweiterungen verwalten</string>
-  <string id="23076">Audio DSP's verwalten</string>
-  <string id="23080">Externe Bildschirmschoner verwalten</string>
-  <string id="23081">Diese Erweiterung hat keine Einstellungen</string>
-  <string id="23083">Erweiterung nochmal verwenden</string>
+
   <string id="23090">Videotext aktivtieren</string>
   <string id="23091">Teletext nicht verfügbar</string>
 
-  <string id="23052">Zwischenspeichern - %i Bytes</string>
   <string id="23100">Externer Player ist aktiv</string>
   <string id="23101">Drücke OK um den Player zu beenden</string>
   <string id="23102">
