added: Possibility to erase all data inside TV Database over Button inside TV settings
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27661 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1696,6 +1696,8 @@
   <string id="19182">Days to display in TV Guide</string>
   <string id="19183">TV Guide linger time</string>
   <string id="19184">Channel info time</string>
+  <string id="19185">Clear TV Database</string>
+  <string id="19186">All data in the Database is erased</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
