changed: instead of having a bool to toggle stretch 16:9 on/off for 4:3 videos, make it a spinner with normal, stretch 14x9, stretch 16x9 and zoom.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27668 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -126,9 +126,10 @@
   <string id="168"></string>
   <string id="169">Resolution</string>
   <string id="170">Adjust display refresh rate to match video</string>
-  <string id="171">Stretch 4:3 content to 16:9</string>
+  <string id="171"></string>
 
   <string id="172">Release date</string>
+  <string id="173">Display 4:3 videos as</string>
 
   <string id="175">Moods</string>
   <string id="176">Styles</string>
