fixed: If no EPG was present during playback start, it was never be refreshed fixed: Channel playback can't start if EPG update is running changed: EPG class locking added: Option in settings to reload epg from clients added: Option to playback last channel on XBMC startup
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27708 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1797,6 +1797,10 @@
   <string id="19184">Anzeigedauer für Kanalinfo</string>
   <string id="19185">TV Datenbank zurücksetzten</string>
   <string id="19186">Alle Daten in der Datenbank werden gelöscht</string>
+  <string id="19187">EPG Daten löschen und neu einlesen</string>
+  <string id="19188">Alle EPG Daten werden gelöscht</string>
+  <string id="19189">Nach Start letzten Kanal wiedergeben</string>
+  <string id="19190">Minimiert</string>
 
   <string id="19499">Andere/Unbekannt</string>
   <string id="19500">Movie/Drama</string>
