--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1699,6 +1699,10 @@
   <string id="19184">Channel info time</string>
   <string id="19185">Clear TV Database</string>
   <string id="19186">All data in the Database is being erased</string>
+  <string id="19187">Delete EPG and read new</string>
+  <string id="19188">EPG is being erased</string>
+  <string id="19189">Continue last channel after startup</string>
+  <string id="19190">Minimized</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
