--- a/addons/visualizations/GLSpectrum/resources/language/German/strings.xml
+++ b/addons/visualizations/GLSpectrum/resources/language/German/strings.xml
@@ -7,13 +7,13 @@
     <string id="30003">Punkte</string>
     <string id="30004">Balkenhöhe</string>
     <string id="30005">Klein</string>
-    <string id="30006">Standart</string>
+    <string id="30006">Standard</string>
     <string id="30007">Groß</string>
     <string id="30008">Sehr groß</string>
     <string id="30009">Geschwindigkeit</string>
     <string id="30010">Sehr langsam</string>
     <string id="30011">Langsam</string>
-    <string id="30012">Standart</string>
+    <string id="30012">Standard</string>
     <string id="30013">Schnell</string>
     <string id="30014">Sehr schnell</string>
 </strings>
