added: Ticket #8800, *.pvr save file permissions on install (thanks to openelec.tv) added: Missing KaiToast avatar images to Confluence added: Helper function queue a notification GUI message to XBMC added: Completed PVR addon include files with missing functions (currently unsupported) to find a fixed API state changed: Enabled Notifications in VDR client again fixed: old callback pointer was still used on some places. removed: Unused stuff from addon headers changed: EPG cleanup timer moved to PVRManager thread and increased repeat time to 15 minutes fixed: Not active timers are shown as recording changed: If more as one recording is running toggle between them for GUIInfoManager labels changed: Timers was not sorted in TV Window added: Context buttons inside timers list to sort by name and date fixed: Keyboard delete button does not work in TV window fixed: PVR-Service was not shown in Confluence system info changed: Cleaned up strings in system information
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27927 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1626,14 +1626,14 @@
   <string id="19110">Try again...</string>
   <string id="19111">Server error!</string>
   <string id="19112">Timers not in sync!</string>
-  <string id="19113">Backend:</string>
-  <string id="19114">Version:</string>
-  <string id="19115">Address:</string>
-  <string id="19116">Disksize:</string>
-  <string id="19117">Channels:</string>
-  <string id="19118">Recordings:</string>
-  <string id="19119">Timers:</string>
-  <string id="19120">Client number:</string>
+
+  <string id="19114">Version</string>
+  <string id="19115">Address</string>
+  <string id="19116">Disksize</string>
+
+
+
+  <string id="19120">Client number</string>
   <string id="19121">Avoid Repeats</string>
   <string id="19122">Timer still recording - really delete?</string>
   <string id="19123">Free-To-Air only</string>
@@ -1704,6 +1704,7 @@
   <string id="19188">EPG is being erased</string>
   <string id="19189">Continue last channel after startup</string>
   <string id="19190">Minimized</string>
+  <string id="19191">PVR service</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
