changed: Use stream url to play for recordings inside GUIWindowTV if present added: Create a "stack://" file if recordings stream url contains a asterix as filename added: Play VDR recordings from disk or samba share by define of a directory in addon settings added: Build also addon helper libraries also as static changed: Use in current addons static libraries again fixed: make clean does not delete all needed files in addon helper libraries
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27947 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/addons/pvr/VDR/resources/language/English/strings.xml
+++ b/addons/pvr/VDR/resources/language/English/strings.xml
@@ -10,4 +10,6 @@
     <string id="30006">Ignore Channels without VPID and APID</string>
     <string id="30007">Allow VDR Messages</string>
     <string id="30008">Priority</string>
+    <string id="30009">Read recordings from directory</string>
+    <string id="30010">VDR recordings directory</string>
 </strings>
