--- a/addons/pvr/VDR/resources/language/German/strings.xml
+++ b/addons/pvr/VDR/resources/language/German/strings.xml
@@ -10,4 +10,6 @@
     <string id="30006">Ignoriere Känale ohne VPID und APID</string>
     <string id="30007">VDR Nachrichten erlauben</string>
     <string id="30008">Priorität</string>
+    <string id="30009">Aufnahmen aus Ordner lesen</string>
+    <string id="30010">VDR Aufnahmeordner</string>
 </strings>
