--- a/skin/Confluence/language/English/strings.xml
+++ b/skin/Confluence/language/English/strings.xml
@@ -164,6 +164,6 @@
   <string id="31506">Available[CR]Groups</string>
   <string id="31507">Ungrouped[CR]Channels</string>
   <string id="31508">Channels in Group</string>
-  <string id="31509">-</string>
+  <string id="31509">Channel Group</string>
   <string id="31510">Timer Set</string>
 </strings>
