[DSPlayer] Added a new option to set every stable codec in ffdshow from xbmc
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@27988 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2208,4 +2208,5 @@
   <string id="35001">Use VMR9 instead of EVR Renderer</string>
   <string id="35002">Use EVR instead of VMR9 Renderer</string>
   <string id="35003">Audio Renderer</string>
+  <string id="35004">Set all stable formats to libavcodec (ffdshow)</string>
 </strings>
