fixed: Playback of channel from guide info dialog not possible fixed: Playtime of TV channel not correct fixed: Channel group was not displayed on Confluence FullScreenInfo fixed: "Channel Group" string in Confluence skin have a dash in german language
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28033 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1626,7 +1626,7 @@
   <string id="19110">Try again...</string>
   <string id="19111">Server error!</string>
   <string id="19112">Timers not in sync!</string>
-
+  <string id="19113">Next</string>
   <string id="19114">Version</string>
   <string id="19115">Address</string>
   <string id="19116">Disksize</string>
