--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1723,7 +1723,7 @@
   <string id="19110">Erneut versuchen...</string>
   <string id="19111">Server Fehler!</string>
   <string id="19112">Timers nicht synchron!</string>
-
+  <string id="19113">Danach</string>
   <string id="19114">Version</string>
   <string id="19115">Addresse</string>
   <string id="19116">Festplattengröße</string>
